# CubeCastRouter

./: .gitignore  Cargo.toml  README.md  todo
files/: example_room.room
src/: http_api.rs  main.rs  users_list.rs
src/config/: mod.rs
src/http/: mod.rs
src/validator/: extractor.rs  message.rs
src/ws/: broadcast.rs  mod.rs  route.rs
tests/: test-SSE-page.html
tests/frontend_test/: client.html  index.html
