[package]
name = "CubeCastRouter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
tokio = { version = "1.45", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
futures-core = "0.3"
actix-cors = "0.7.1"
async-stream = "0.3.6"
actix-web-lab = "0.24.1"
